<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">بنگاه مدرن من</string>
    <string name="title_home">خانه</string>
    <string name="title_map">نقشه</string>
    <string name="title_notifications">اعلانات</string>
    <string name="title_search">جستجو</string>
    <string name="title_category">دسته ها</string>
    <string-array name="array_sp_dialog_melk_gallary">
        <item>saveToGallary</item>
        <item>deleteImage</item>
    </string-array>
    <string-array name="array_name_eshteraks">
        <item>دارد</item>
        <item>ندارد</item>
        <item>مشترک</item>
    </string-array>
    <string-array name="array_trans_type">
        <item>فروش</item>
        <item>رهن و اجاره</item>
        <item>مشارکت در ساخت</item>
        <item>پیش فروش</item>
    </string-array>
    <string-array name="array_combo_melk_type_sell_and_rent">
        <item>آپارتمان</item>
        <item>ویلا</item>
        <item>باغ ویلا</item>
        <item>مغازه</item>
        <item>پنت هاوس</item>
        <item>زمین</item>
        <item>کلنگی</item>
        <item>باغ و باغچه</item>
        <item>مستقلات</item>
        <item>کارخانه</item>
        <item>سوئیت</item>
        <item>دامداری</item>
        <item>انبار</item>
        <item>سوله</item>
        <item>استودیو</item>
        <item>سالن، تالار</item>
    </string-array>
    <string-array name="array_combo_melk_type_per_sell">
        <item>آپارتمان</item>
        <item>ویلا</item>
        <item>باغ ویلا</item>
        <item>مغازه</item>
        <item>پنت هاوس</item>
        <item>کلنگی</item>
        <item>باغ و باغچه</item>
        <item>مستقلات</item>
        <item>کارخانه</item>
        <item>سوئیت</item>
        <item>دامداری</item>
        <item>انبار</item>
        <item>سوله</item>
        <item>استودیو</item>
        <item>سالن، تالار</item>
    </string-array>
    <string-array name="array_combo_melk_type_partnership">
        <item>زمین</item>
        <item>کلنگی</item>
        <item>باغ و باغچه</item>
    </string-array>
    <string-array name="array_combo_user_type">
        <item>مسکونی</item>
        <item>اداری</item>
        <item>موقعیت اداری</item>
        <item>تجاری</item>
        <item>اقامتی و تفریحی</item>
        <item>صنعتی و تولیدی</item>
        <item>کشاورزی</item>
        <item>انبار کالا</item>
        <item>ورزشی</item>
        <item>دامپروری</item>
        <item>مطب</item>
        <item>آموزشی</item>
    </string-array>
    <string name="melk_user_type_str">نوع کاربری ملک را انتخاب کنید</string>
    <string name="special_feature_str">امکانات ویژه</string>
    <string name="type_of_melk_document_str">نوع سند ملک</string>
    <string name="floo_covering_type_str">نوع کفپوش</string>
    <string name="ch_sytem_str">سیستم سرماش و گرمایش</string>
    <string name="building_facades_str">نمای ساختمان</string>
    <string name="kitchen_cabinets_str">کابینت آشپزخانه</string>
    <string name="windows_type_str">نوع پنجره ها</string>
    <string name="building_type_str">نوع ساختمان</string>
    <string name="view_str">چشم انداز</string>
    <string name="room_type_str">انواع اتاق</string>
    <string name="furnished_facilities_str">امکانات مبله</string>
    <string name="username">محمد رضا عبیری</string>
    <string name="email">mreza.abiri@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_location">Search Location</string>
    <string name="yourLocation">مکان فعلی شما</string>
    <string name="strDialogBoxMarker">آیا به ثبت این نقطه تمایل دارید؟</string>
    <string name="strMassegeReplaceHome">آیا از جابجایی مکان این ملک مطمئن هستید؟</string>
    <string name="strDialogDraggMarker">تایید جابجایی نشانگر!</string>
    <string name="strDialogBoxRemoveMarker">آیا از حذف ملک مورد نظر اطمینان دارید؟</string>
    <string name="titleDialogMarker">ثبت نقطه</string>
    <string name="titleDialogRemoveMarker">حذف ملک</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="edtMapSearchHint">لطفا مکان مورد نظر را جستجو نمایید</string>
    <string name="memory_full_message">فضای حافظه داخلی دستگاه شما کافی نمی باشد!</string>
    <string name="internal_memory_full_message">فضای حافظه خارجی دستگاه شما کافی نمی باشد!</string>
    <string name="dragMarkerEnabled">اکنون شما میتوانید نشانگر مورد نظر را جابجا نمایید!</string>
    <string name="no_internet_access">دستگاه شما به اینترنت متصل نمی باشد!</string>
    <string name="no_gps_enabled">مکان نمای دستگاه شما خاموش می باشد!</string>
    <string name="my_bongah">بنگاه من</string>
    <string name="enter_melk_info">ثبت اطلاعات ملک</string>
    <string name="googlePlayService_notInstalled">\"سرویس دهنده گوگل برروی گوشی شما نصب نیست یا نیاز به بروز رسانی دارد\"</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="permission_required_toast">permission_required</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <string name="yourLastLocation">آخرین موقعیت شما در این محدوده قرار داشته است!</string>
    <string name="no_place_available">موردی یافت نشد!</string>
    <string name="firstFixMarkerDraging">ابتدا جابجایی را مشخص کنید!</string>
    <string name="no_route_find">No route found!</string>
    <string name="place_details">place_details</string>
    <string name="homeSaveAlarm">آیا مایلید تغییرات اعمال شده را ذخیره کنید؟</string>
    <string name="fieldsAreEmpty">لطفا موارد ستاره دار را پر کنید!</string>
    <string-array name="arr_number_of_owners">
        <item> 0</item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
    </string-array>
    <string-array name="arr_percentage_of_progress_made">
        <item> -</item>
        <item> 5</item>
        <item> 10</item>
        <item> 15</item>
        <item> 20</item>
        <item> 25</item>
        <item> 30</item>
        <item> 35</item>
        <item> 40</item>
        <item> 45</item>
        <item> 50</item>
        <item> 55</item>
        <item> 60</item>
        <item> 65</item>
        <item> 70</item>
        <item> 75</item>
        <item> 80</item>
        <item> 85</item>
        <item> 90</item>
        <item> 95</item>
        <item> 100</item>
    </string-array>
    <string-array name="arr_number_of_human_for_live">
        <item> -</item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>
        <item> 8</item>
        <item> 9</item>
        <item> +10</item>
    </string-array>
    <string-array name="arr_number_of_dung_for_sell">
        <item> 6</item>
        <item> 5.5</item>
        <item> 5</item>
        <item> 4.5</item>
        <item> 4</item>
        <item> 3.5</item>
        <item> 3</item>
        <item> 2.5</item>
        <item> 2</item>
        <item> 1.5</item>
        <item> 1</item>
        <item> 0.5</item>
    </string-array>
    <string-array name="arr_melk_age">
        <item> -</item>
        <item> 0</item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>
        <item> 8</item>
        <item> 9</item>
        <item> 10</item>
        <item> 11</item>
        <item> 12</item>
        <item> 13</item>
        <item> 14</item>
        <item> 15</item>
        <item> 16</item>
        <item> 17</item>
        <item> 18</item>
        <item> 19</item>
        <item> 20</item>
        <item> 21</item>
        <item> 22</item>
        <item> 23</item>
        <item> 24</item>
        <item> 25</item>
        <item> 26</item>
        <item> 27</item>
        <item> 28</item>
        <item> 29</item>
        <item> 30</item>
        <item> 31</item>
        <item> 32</item>
        <item> 33</item>
        <item> 34</item>
        <item> 35</item>
        <item> 36</item>
        <item> 37</item>
        <item> 38</item>
        <item> 39</item>
        <item> +40</item>
    </string-array>
    <string-array name="arr_number_of_bedroom">
        <item> -</item>
        <item> 0</item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>
        <item> 8</item>
        <item> 9</item>
        <item> 10</item>
        <item> 11</item>
        <item> 12</item>
        <item> 13</item>
        <item> 14</item>
        <item> +15</item>
    </string-array>
    <string-array name="arr_floor_number">
        <item> -5</item>
        <item> -4</item>
        <item> -3</item>
        <item> -2</item>
        <item> -1</item>
        <item> -</item>
        <item> 0</item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>
        <item> 8</item>
        <item> 9</item>
        <item> 10</item>
        <item> 11</item>
        <item> 12</item>
        <item> 13</item>
        <item> 14</item>
        <item> 15</item>
        <item> 16</item>
        <item> 17</item>
        <item> 18</item>
        <item> 19</item>
        <item> 20</item>
        <item> 21</item>
        <item> 22</item>
        <item> 23</item>
        <item> 24</item>
        <item> 25</item>
        <item> 26</item>
        <item> 27</item>
        <item> 28</item>
        <item> 29</item>
        <item> 30</item>
        <item> 31</item>
        <item> 32</item>
        <item> 33</item>
        <item> 34</item>
        <item> 35</item>
        <item> 36</item>
        <item> 37</item>
        <item> 38</item>
        <item> 39</item>
        <item> 40</item>
        <item> 41</item>
        <item> 42</item>
        <item> 43</item>
        <item> 44</item>
        <item> 45</item>
        <item> 46</item>
        <item> 47</item>
        <item> 48</item>
        <item> 49</item>
        <item> +50</item>
    </string-array>
    <string name="str_official">اداری</string>
    <string name="str_commercial">تجاری</string>
    <string name="str_idustrial">صنعتی ، تولیدی</string>
    <string name="str_clinic">مطب</string>
    <string name="str_sports">ورزشی</string>
    <string name="str_agriculture">کشاورزی</string>
    <string name="str_administrative_position">موقعیت اداری</string>
    <string name="str_resident">اقامتی ، تفریحی</string>
    <string name="str_animal_husbandry">دامپروری</string>
    <string name="str_educational">آموزشی</string>
    <string name="str_store">انبار کالا</string>
    <string name="str_confirm">تایید</string>
    <string name="str_residential">مسکونی</string>
    <string name="str_refrigerator">یخچال</string>
    <string name="str_microwave">ماکروویو</string>
    <string name="str_farsh">فرش</string>
    <string name="str_chandelier">لوستر</string>
    <string name="str_vacuum_cleaner">جارو برقی</string>
    <string name="str_dishwasher">ماشین ظرفشویی</string>
    <string name="str_bed_room_flat">تخت</string>
    <string name="str_oven">اجاق گاز</string>
    <string name="str_furniture">مبلمان</string>
    <string name="str_television">تلوزیون</string>
    <string name="str_curtain">پرده</string>
    <string name="str_otto">اتو</string>
    <string name="str_washing_machine">ماشین لباس شویی</string>
    <string name="str_dishes">ظروف</string>
</resources>